Initial commit: add Pokémon app

--- a/app.json
+++ b/app.json
@@ -43,6 +43,18 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "eac74a54-047f-45ab-a172-ce4f0e9b9672"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/eac74a54-047f-45ab-a172-ce4f0e9b9672"
     }
   }
 }
